--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@tailwindcss/forms": "^0.5.7",
+    "lucide-react": "^0.364.0",
     "next": "14.1.3",
     "react": "^18",
     "react-dom": "^18"
