--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "clsx": "^2.1.0",
     "lucide-react": "^0.364.0",
     "next": "14.1.3",
+    "next-intl": "^3.11.1",
     "react": "^18",
     "react-dom": "^18",
     "tailwind-merge": "^2.2.2",
