--- a/package.json
+++ b/package.json
@@ -24,13 +24,15 @@
     "@tailwindcss/forms": "^0.5.7",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
+    "framer-motion": "^11.1.7",
     "lucide-react": "^0.364.0",
     "next": "14.1.3",
     "next-intl": "^3.11.1",
     "react": "^18",
     "react-dom": "^18",
     "tailwind-merge": "^2.2.2",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "zustand": "^4.5.2"
   },
   "devDependencies": {
     "@tailwindcss/aspect-ratio": "^0.4.2",
