--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,6 +20,7 @@
     "paths": {
       "@/*": ["./*"],
       "@components/*": ["./app/sites/_components/*"],
+      "@dashboard_components/*": ["./app/dashboard/_components/*"],
       "@base_components/*": ["./components/*"]
     }
   },
